--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootswatch": "^5.1.0",
+    "i18next": "^21.1.1",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-i18next": "^11.12.0",
+    "react-icons": "^4.2.0",
+    "swiper": "^7.0.4"
   },
   "devDependencies": {
     "eslint": "7.32.0",
