--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.0",
     "i18next": "^21.1.1",
     "next": "11.1.0",
+    "node-sass": "^5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-i18next": "^11.12.0",
     "react-icons": "^4.2.0",
+    "sass": "^1.49.0",
     "swiper": "^7.0.4"
   },
   "devDependencies": {
