--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^3.2.0",
+    "@sanity/image-url": "^1.0.1",
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.0",
     "i18next": "^21.1.1",
